--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-# Core RL and ML libraries
+# filepath: d:/trading-rl-agent/requirements.txt
+numpy==1.23.5
 stable-baselines3[extra]==2.1.0
-ray[all]==2.6.0
-hydra-core==1.4.0
-
-# Experiment tracking and logging
+ray==2.6.0
+hydra-core==1.3.2
 mlflow==2.7.0
 wandb==0.15.11
-
-# Technical analysis and data utilities
-TA-Lib==0.4.28
+ta-lib
 ta==0.10.2
-
-# ONNX for model export and inference
 onnx==1.13.0
 onnxruntime==1.15.1
