--- a/Dockerfile.rocm
+++ b/Dockerfile.rocm
@@ -1,5 +1,5 @@
-ARG CUDA_VARIANT=nvidia/cuda:12.2.2-cudnn8-runtime-ubuntu22.04
-FROM ${CUDA_VARIANT}
+ARG ROCM_VARIANT=rocm/pytorch:rocm6.3.1_ubuntu22.04
+FROM ${ROCM_VARIANT}
 
 # Create non-root user
 RUN groupadd -g 1000 rluser && useradd -m -u 1000 -g rluser rluser
