--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,55 @@ rl-trader
 .vscode
 __pycache__/
 *.pyc
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.pytest_cache/
+
+# Virtual environments
+venv/
+env/
+.venv/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Logs
+*.log
+
+# Local data & model outputs
+/data/
+/outputs/
+
+# Docker
+.Dockerfile*
+!Dockerfile
+docker-compose*.yml
+compose-dev.yaml
+
+# Kubernetes manifests
+*.yaml
+!src/configs/**
+
+# Misc
+*.swp
+*.tmp
