--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # filepath: d:/trading-rl-agent/requirements.txt
 numpy==1.23.5
+TA-Lib
 stable-baselines3[extra]==2.1.0
 ray==2.43.0
 hydra-core==1.3.2
