--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 numpy==1.23.5
 TA-Lib
 stable-baselines3[extra]==2.1.0
-ray==2.43.0
+ray[tune]==2.43.0
 hydra-core==1.3.2
 mlflow==2.20.3
 wandb==0.15.11
