--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # filepath: d:/trading-rl-agent/requirements.txt
-numpy
+numpy<2.0.0
 stable-baselines3[extra]==2.1.0
 ray[tune]==2.43.0
 hydra-core==1.3.2
@@ -15,3 +15,4 @@ pyyaml>=6.0
 scikit-learn>=1.0.0
 faker>=13.0.0
 scipy>=1.7.0
+dm-tree>=0.1.8
