--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 # filepath: d:/trading-rl-agent/requirements.txt
-numpy<2.0.0
-stable-baselines3[extra]==2.1.0
-ray[tune]==2.43.0
+numpy==2.2.5
+ray[rllib,data,train,tune,serve]
 hydra-core==1.3.2
 mlflow==2.20.3
 wandb==0.15.11
 ta==0.10.2
 onnx==1.17.0
-onnxruntime==1.15.1
+onnxruntime==1.20.0
 pytest==7.4.0
 yfinance==0.2.61
 python-dotenv==0.20.0
