--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -1,22 +1,22 @@
-# Trading RL Agent - Core Dependencies
-# Fixed NumPy compatibility and removed unnecessary packages
-
+# Trading RL Agent - Minimal Dependencies
 # Core numerical computing
-numpy>=1.21.0,<2.0.0  # Fix compatibility with wandb and ray
-torch>=1.12.0,<2.4.0  # PyTorch for neural networks  
+numpy<2.0.0  # Fix compatibility with wandb and ray
+torch>=1.12.0,<2.4.0  # PyTorch for neural networks
 scipy>=1.7.0,<1.12.0  # Scientific computing
 
 # Data handling
 pandas>=1.5.0,<2.2.0  # Data manipulation
 pyyaml>=6.0,<7.0      # Configuration files
 
-# Machine Learning & RL  
-ray[rllib]>=2.31.0,<2.47.0  # Distributed RL (minimal extras)
+# Machine Learning & RL
+ray[rllib]>=2.5.0,<2.9.0  # Distributed RL (without unnecessary extras)
 gymnasium>=0.28.0,<0.30.0  # RL environments
 
-# Market data & Technical Analysis
+# Market data
 yfinance>=0.2.0,<0.3.0     # Financial data
-ta>=0.10.0,<0.11.0         # Technical indicators
+
+# Technical indicators
+ta>=0.10.0,<0.11.0         # Technical analysis
 
 # Testing
 pytest>=7.0.0,<8.0.0       # Unit testing
