feat: Enhance Trading Environment for Continuous Actions and Debugging
- Added support for continuous action space in TradingEnv, allowing TD3 compatibility.
- Improved observation handling by dynamically determining feature count and ensuring correct shapes.
- Incorporated robust error handling and logging for observation shapes and data integrity.
- Updated data loading to explicitly cast price and volume columns to float32 for consistency.
- Enhanced step function to handle both discrete and continuous actions, with appropriate clipping and mapping.
- Introduced sentiment analysis for forex pairs, including scraping from Yahoo Finance and sentiment scoring.
- Added comprehensive integration tests for TD3 agent and trading environment interactions.
- Created utility functions for setting up and tearing down test environments, ensuring isolation in tests.
- Implemented detailed logging and assertions in training and data preparation processes for better traceability.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	// "forwardPorts": [11434],
 
 	// Run commands after the container is created to ensure proper permissions
 	"postCreateCommand": "chmod -R u+w /workspace && find /workspace -name '*.sh' -exec chmod +x {} \\;",
