--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,6 @@ faker>=13.0.0,<25.0.0      # Test data generation
 # Utilities
 python-dotenv>=0.20.0,<1.1.0  # Environment variables
 scikit-learn>=1.0
+matplotlib>=3.5.0,<3.9.0      # Plotting and visualization
+pynvml>=11.0.0,<12.0.0        # NVIDIA GPU monitoring
+optuna>=3.0.0,<4.0.0         # Hyperparameter optimization
