--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,4 @@ scikit-learn>=1.0
 matplotlib>=3.5.0,<3.9.0      # Plotting and visualization
 pynvml>=11.0.0,<12.0.0        # NVIDIA GPU monitoring
 optuna>=3.0.0,<4.0.0         # Hyperparameter optimization
+feedparser>=6.0.0,<7.0.0    # RSS feed parsing for news sentiment
