--- a/src/configs/model/ensemble_agent.yaml
+++ b/src/configs/model/ensemble_agent.yaml
@@ -14,17 +14,18 @@ agents:
       automatic_entropy_tuning: true
       target_entropy: -1.0
   
-  td3:
+  # Note: TD3 has been removed from Ray RLlib 2.38.0+
+  # SAC provides similar continuous control capabilities
+  sac_alternative:
     enabled: true
     config:
-      learning_rate: 3e-4
-      gamma: 0.99
-      tau: 0.005
-      batch_size: 256
-      hidden_dims: [256, 256]
-      policy_delay: 2
-      target_noise: 0.2
-      exploration_noise: 0.1
+      learning_rate: 1e-4  # Different learning rate for diversity
+      gamma: 0.995
+      tau: 0.01
+      batch_size: 128
+      hidden_dims: [512, 256]
+      automatic_entropy_tuning: true
+      target_entropy: -2.0
 
 # Ensemble combination methods
 ensemble_method: "weighted_average"  # Options: weighted_average, voting, risk_parity
