--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -7,6 +7,7 @@ sphinx-rtd-theme>=2.0.0
 sphinx-autodoc-typehints>=1.25.0
 myst-parser>=2.0.0
 sphinx-autobuild>=2021.3.14
+linkify-it-py>=2.0.0
 
 # Code formatting and linting
 black>=24.1.1
