--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,8 +37,8 @@ repos:
       - id: flake8
         args:
           [
-            "--max-line-length=100",
-            "--extend-ignore=E203,W503,E402,F401,F541,D100,D103,D107,D200,D202,D205,D400,D401,B001,E722,SIM101,SIM102,SIM105,SIM115,B009",
+            "--max-line-length=88",
+            "--extend-ignore=E203,W503,E402,F401,F541,D100,D103,D107,D200,D202,D205,D400,D401,B001,E722,SIM101,SIM102,SIM105,SIM115,B009,F811,F841,E741,E712",
           ]
         additional_dependencies:
           - flake8-docstrings
