--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,12 +54,6 @@ repos:
           - types-PyYAML
           - types-requests
           - types-setuptools
-        args:
-          [
-            "--ignore-missing-imports",
-            "--no-strict-optional",
-            "--disable-error-code=import-untyped,no-untyped-def,no-any-return",
-          ]
         exclude: ^(tests/|docs/|scripts/|build_|generate_|validate_|run_|evaluate_)
 
   - repo: https://github.com/pycqa/bandit
@@ -77,7 +71,7 @@ repos:
         args:
           [
             "--convention=google",
-            "--add-ignore=D100,D103,D107,D200,D202,D205,D400,D401,D101,D102,D212,D415,D416,D411",
+            "--add-ignore=D100,D103,D104,D105,D107,D200,D202,D205,D209,D400,D401,D402,D101,D102,D212,D415,D416,D411",
           ]
         exclude: ^(tests/|docs/|scripts/|build_|generate_|validate_|run_|evaluate_)
 
@@ -88,24 +82,27 @@ repos:
         args: ["--py39-plus"]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
+    rev: v3.1.0
     hooks:
       - id: prettier
         types_or: [yaml, markdown, json]
         exclude: ^(\.github/|docs/_build/)
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.9.1
+    rev: 1.9.0
     hooks:
       - id: nbqa-black
-        additional_dependencies: [black==24.1.1]
+        additional_dependencies: [black==25.1.0]
       - id: nbqa-isort
-        additional_dependencies: [isort==5.13.2]
+        additional_dependencies: [isort==6.0.1]
         args: ["--profile=black"]
       - id: nbqa-flake8
-        additional_dependencies: [flake8==7.0.0]
+        additional_dependencies: [flake8==7.3.0]
         args:
-          ["--max-line-length=88", "--extend-ignore=E203,W503,E402,F401,F541"]
+          [
+            "--max-line-length=88",
+            "--extend-ignore=E203,W503,E402,F401,F541,F811,F821,E501,W291,W293,E722,E265,F841,F824",
+          ]
         exclude: ^(Complete_Pipeline_Walkthrough\.ipynb)
 
   - repo: local
@@ -126,14 +123,14 @@ repos:
 
       - id: run-tests
         name: Run unit tests
-        entry: python -m pytest tests/ -x --ff -q
+        entry: python -m pytest tests/ -x --ff -q --tb=short
         language: system
         pass_filenames: false
         stages: [manual]
 
       - id: security-check
         name: Security vulnerability check
-        entry: safety check --json
+        entry: safety scan --json
         language: system
         pass_filenames: false
         stages: [manual]
@@ -147,5 +144,5 @@ ci:
     for more information, see https://pre-commit.ci
   autoupdate_commit_msg: "[pre-commit.ci] pre-commit autoupdate"
   autoupdate_schedule: weekly
-  skip: [run-tests, security-check, mypy, bandit, pydocstyle, nbqa-flake8] # Skip problematic hooks temporarily
+  skip: [run-tests, security-check] # Skip only manual hooks
   submodules: false
