--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -33,5 +33,8 @@ pyupgrade>=3.15.0
 # Pre-commit hooks
 pre-commit>=3.6.0
 
+# TOML parsing for configuration files
+tomli>=2.0.0
+
 # Documentation testing
 doc8>=1.1.1
