--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,14 +82,14 @@ repos:
         args: ["--py39-plus"]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         types_or: [yaml, markdown, json]
         exclude: ^(\.github/|docs/_build/)
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.9.0
+    rev: 1.9.1
     hooks:
       - id: nbqa-black
         additional_dependencies: [black==25.1.0]
