--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,13 @@ yfinance>=0.2.0,<0.3.0     # Financial data
 ta>=0.10.0,<0.11.0         # Technical indicators
 
 # Testing
-pytest>=7.0.0,<8.0.0       # Unit testing
+pytest>=7.4.0              # Unit testing (updated for compatibility)
+pytest-cov>=4.1.0          # Coverage reporting
+pytest-mock>=3.11.0        # Mock objects for testing
+pytest-xdist>=3.3.0        # Parallel test execution
+pytest-asyncio>=0.21.0     # Async test support
+pytest-timeout>=2.1.0      # Test timeout management
+pytest-benchmark>=4.0.0    # Performance benchmarking
 faker>=13.0.0,<25.0.0      # Test data generation
 
 # Utilities
