--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
       - id: check-json
       - id: check-toml
       - id: check-xml
-
+        exclude: ^(coverage\.json|test-results\.xml)$
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
