--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,9 +15,10 @@ repos:
       - id: detect-private-key
       - id: mixed-line-ending
       - id: check-json
+        exclude: ^(coverage\.json)$
       - id: check-toml
       - id: check-xml
-        exclude: ^(coverage\.json|test-results\.xml)$
+        exclude: ^(test-results\.xml)$
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
@@ -86,7 +87,7 @@ repos:
     hooks:
       - id: prettier
         types_or: [yaml, markdown, json]
-        exclude: ^(\.github/|docs/_build/)
+        exclude: ^(\.github/|docs/_build/|coverage\.json|test-results\.xml)
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.9.1
