--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -17,6 +17,8 @@ flake8-docstrings>=1.7.0
 flake8-bugbear>=23.12.2
 flake8-comprehensions>=3.14.0
 flake8-simplify>=0.21.0
+pandas-ta>=0.3.14b0
+ta-lib>=0.4.28
 
 # Type checking
 mypy>=1.8.0
