--- a/requirements-finrl.txt
+++ b/requirements-finrl.txt
@@ -32,6 +32,7 @@ pyfolio-reloaded>=0.9.5
 
 # Data Processing & Technical Analysis
 ta-lib>=0.4.26
+pandas-ta>=0.3.14b0
 stockstats>=0.5.0
 finta>=1.3.0
 
