--- a/requirements-ml.txt
+++ b/requirements-ml.txt
@@ -7,5 +7,7 @@
 # Machine learning frameworks
 torch>=1.12.0,<2.4.0     # 2GB - PyTorch for neural networks
 gymnasium>=0.28.0,<0.30.0  # 10MB - RL environments (lightweight)
+pandas-ta>=0.3.14b0
+ta-lib>=0.4.28
 
 # Total: ~2.1GB - ML development ready
