--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -37,6 +37,7 @@ empyrical>=0.5.5            # Statistical risk metrics
 # Technical Analysis - Professional Grade
 # ========================================
 ta-lib>=0.4.25              # Industry standard technical analysis
+pandas-ta>=0.3.14b0
 ta>=0.10.2                  # Additional technical indicators
 finta>=1.3                  # Financial technical analysis
 
