--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ gymnasium>=0.28.0,<0.30.0  # RL environments
 yfinance>=0.2.0,<0.3.0     # Financial data
 ta>=0.10.0,<0.11.0         # Technical indicators
 pandas-ta>=0.3.14b0
+# TA-Lib Python bindings require the TA-Lib C library to be installed system-wide.
+# On Ubuntu, run: sudo apt-get update && sudo apt-get install -y libta-lib0 libta-lib0-dev
 ta-lib>=0.4.28
 
 # Testing
