--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
     "ghcr.io/devcontainers/features/python:1": {
       "installTools": true,
       "optimize": true,
-      "version": "os-provided"
+      "version": "3.11"
     }
   },
   "runArgs": ["--gpus=all"],
