--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 88
-target-version = ['py39', 'py310', 'py311', 'py312']
+target-version = ['py310', 'py311', 'py312']
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -66,7 +66,7 @@ per-file-ignores = [
 ]
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
@@ -146,7 +146,6 @@ filterwarnings = [
     "ignore::PendingDeprecationWarning",
     "ignore::FutureWarning",
     "ignore::UserWarning:ray.*",
-    "ignore::UserWarning:torch.*",
     "ignore::UserWarning:gymnasium.*",
     "ignore::RuntimeWarning",
     "error::UserWarning:src.*",
