--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@
 # Fixed NumPy compatibility and removed unnecessary packages
 
 # Core numerical computing
+# NOTE: torch>=2.3.0 requires Python 3.11+ and CUDA 12.x. For Python 3.10 and CUDA 11.8, use torch<2.3.0.
 numpy>=1.21.0,<2.0.0  # Fix compatibility with wandb and ray
-torch>=1.12.0,<2.4.0  # PyTorch for neural networks
+torch>=2.3.0,<2.4.0  # PyTorch for neural networks, CUDA 12.x, Python 3.11+
 scipy>=1.7.0,<1.12.0  # Scientific computing
 
 # Data handling
