--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
       "version": "latest"
     },
     "ghcr.io/devcontainers/features/python:1": {
-      "installTools": true,
+      "installTools": false,
       "optimize": true,
       "version": "3.11"
     }
