--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,10 @@ requests>=2.28.0,<3.0.0  # HTTP requests for sentiment and data fetching
 beautifulsoup4>=4.11.0,<5.0.0  # HTML parsing for sentiment scraping
 psutil>=5.9.0,<6.0
 backtesting>=0.6.4
+
+# FinRL & related dependencies
+finrl>=0.3.7
+alpaca-py>=0.4.0
+alpaca-trade-api>=2.3.0
+ccxt>=1.66.32
+stockstats>=0.4.0
