--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,4 @@ alpaca-py>=0.4.0
 alpaca-trade-api>=2.3.0
 ccxt>=1.66.32
 stockstats>=0.4.0
+TA-Lib>=0.4.28        # Required by FinRL & local tests (`import talib`)
