--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest pytest-cov flake8
         pip install -e .
+    - name: Install pre-commit
+      run: pip install pre-commit
 
     - name: Lint with flake8
       run: |
+        pre-commit run --all-files
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings
