Refactor documentation and code formatting across multiple files
- Updated documentation to use italics for illustrative metrics and sample data notes in CLEANUP_PLAN.md, ROADMAP.md, and various documentation files.
- Improved code formatting by adding line breaks and consistent indentation in several Python files, including src/agents, src/data, and tests.
- Adjusted import statements for better organization and clarity in multiple modules.
- Modified requirements.txt to maintain compatibility with Python 3.10 by changing PyTorch version.
- Enhanced test cases for better readability and maintainability, including updates in focused test files and comprehensive data preprocessing tests.
- Cleaned up unused imports and unnecessary comments in various files to streamline the codebase.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # Core numerical computing
 # NOTE: torch>=2.3.0 requires Python 3.11+ and CUDA 12.x. For Python 3.10 and CUDA 11.8, use torch<2.3.0.
 numpy>=1.21.0,<2.0.0  # Fix compatibility with wandb and ray
-torch>=2.3.0,<2.4.0  # PyTorch for neural networks, CUDA 12.x, Python 3.11+
+torch>=1.12.0,<2.3.0  # PyTorch for neural networks, maintain Python 3.10 compatibility
 scipy>=1.7.0,<1.12.0  # Scientific computing
 
 # Data handling
