--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ requests>=2.28.0,<3.0.0  # HTTP requests for sentiment and data fetching
 beautifulsoup4>=4.11.0,<5.0.0  # HTML parsing for sentiment scraping
 psutil>=5.9.0,<6.0
 backtesting>=0.6.4
+riskfolio-lib>=7.0.1
 
 # FinRL & related dependencies
 finrl>=0.3.7
