--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ typer[all]>=0.9.0
 requests>=2.28.0,<3.0.0  # HTTP requests for sentiment and data fetching
 beautifulsoup4>=4.11.0,<5.0.0  # HTML parsing for sentiment scraping
 psutil>=5.9.0,<6.0
-backtesting>=0.6.4
+backtrader>=1.9.78
 riskfolio-lib>=7.0.1
 
 # FinRL & related dependencies
