--- a/requirements.in
+++ b/requirements.in
@@ -42,6 +42,7 @@ pynvml>=11.0.0,<12.0.0        # NVIDIA GPU monitoring
 optuna>=3.0.0,<4.0.0         # Hyperparameter optimization
 feedparser>=6.0.0,<7.0.0    # RSS feed parsing for news sentiment
 empyrical>=0.5.3
+vaderSentiment>=3.3.2
 
 # Add missing dependencies for web requests, HTML parsing, and system monitoring
 requests>=2.28.0,<3.0.0  # HTTP requests for sentiment and data fetching
