--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ pynvml>=11.0.0,<12.0.0        # NVIDIA GPU monitoring
 optuna>=3.0.0,<4.0.0         # Hyperparameter optimization
 feedparser>=6.0.0,<7.0.0    # RSS feed parsing for news sentiment
 empyrical>=0.5.3
+vaderSentiment>=3.3.2
 typer[all]>=0.9.0
 
 # Add missing dependencies for web requests, HTML parsing, and system monitoring
