--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ riskfolio-lib>=7.0.1
 
 # Performance analytics
 quantstats>=0.0.64
-ipython>=8.0
+ipython>=8.10.0  # avoid CVE-2023-**; latest upstream is 9.4.0
 
 # FinRL & related dependencies
 finrl>=0.3.7
