Organize tests into subdirectories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ disallow_incomplete_defs = false
 ignore_errors = true
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
+testpaths = ["tests/unit", "tests/integration", "tests/performance", "tests/smoke"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
