--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
 [pytest]
-testpaths = tests
+testpaths =
+    tests/unit
+    tests/integration
+    tests/performance
+    tests/smoke
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
