--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest tests/ --cov=src --cov-report=xml
+        pytest tests/unit tests/integration --cov=src --cov-report=xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
