--- a/Dockerfile.rocm
+++ b/Dockerfile.rocm
@@ -7,21 +7,10 @@ RUN groupadd -g 1000 rluser && useradd -m -u 1000 -g rluser rluser
 # Install build tools
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-      build-essential wget autoconf automake libtool pkg-config \
+      build-essential \
       software-properties-common cmake git python3-dev python3-pip \
       libssl-dev libgl1 libglib2.0-0 && \
     rm -rf /var/lib/apt/lists/*
-
-# Build & install TA-Lib C library
-RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
-    tar -xzf ta-lib-0.4.0-src.tar.gz && \
-    cd ta-lib && ./configure && make && make install && \
-    cd .. && rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
-
-# Symlink to satisfy '-lta-lib'
-RUN ln -s /usr/local/lib/libta_lib.so /usr/local/lib/libta-lib.so && \
-    ln -s /usr/local/lib/libta_lib.a /usr/local/lib/libta-lib.a && \
-    ldconfig
 
 # Stage 2: install Python dependencies
 FROM base AS deps
