--- a/requirements.in
+++ b/requirements.in
@@ -21,8 +21,6 @@ sb3-contrib>=1.7.0
 yfinance>=0.2.0,<0.3.0     # Financial data
 ta>=0.10.0,<0.11.0         # Technical indicators
 pandas-ta>=0.3.14b0
-# TA-Lib Python bindings require the TA-Lib C library to be installed system-wide.
-# On Ubuntu, run: sudo apt-get update && sudo apt-get install -y libta-lib0 libta-lib0-dev
 
 # Testing
 pytest>=7.4.0              # Unit testing (updated for compatibility)
@@ -61,4 +59,4 @@ alpaca-py>=0.4.0
 alpaca-trade-api>=2.3.0,<3.1.1
 ccxt>=1.66.32
 stockstats>=0.4.0
-TA-Lib>=0.4.28        # Required by FinRL & local tests (`import talib`)
+# Using pandas_ta and ta libraries for technical analysis
