--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,6 @@ pytorch-forecasting>=1.4.0
 yfinance>=0.2.0,<0.3.0     # Financial data
 ta>=0.10.0,<0.11.0         # Technical indicators
 pandas-ta>=0.3.14b0
-# TA-Lib Python bindings require the TA-Lib C library to be installed system-wide.
-# On Ubuntu, run: sudo apt-get update && sudo apt-get install -y libta-lib0 libta-lib0-dev
 
 # Testing
 pytest>=7.4.0              # Unit testing (updated for compatibility)
@@ -53,6 +51,8 @@ beautifulsoup4>=4.11.0,<5.0.0  # HTML parsing for sentiment scraping
 psutil>=5.9.0,<6.0
 backtrader>=1.9.78
 riskfolio-lib>=7.0.1
+wrds
+exchange_calendars
 
 # Performance analytics
 quantstats>=0.0.64
@@ -64,4 +64,4 @@ alpaca-py>=0.4.0
 alpaca-trade-api>=2.3.0,<3.1.1
 ccxt>=1.66.32
 stockstats>=0.4.0
-TA-Lib>=0.4.28        # Required by FinRL & local tests (`import talib`)
+# Using pandas_ta and ta libraries for technical analysis
