--- a/requirements.txt
+++ b/requirements.txt
@@ -43,8 +43,7 @@ optuna>=3.0.0,<4.0.0         # Hyperparameter optimization
 feedparser>=6.0.0,<7.0.0    # RSS feed parsing for news sentiment
 empyrical>=0.5.3
 vaderSentiment>=3.3.2
--nltk>=3.8
-+nltk>=3.8,<4.0.0
+nltk>=3.8,<4.0.0
 typer[all]>=0.9.0
 
 # Add missing dependencies for web requests, HTML parsing, and system monitoring
