feat: Add comprehensive risk management module for trading system
- Introduced risk management module with Value at Risk (VaR) calculations, position sizing using Kelly criterion, drawdown monitoring, and real-time risk monitoring.
- Implemented RiskManager class to handle portfolio risk monitoring, position sizing, and risk controls.
- Added utility functions for calculating various risk metrics including Sharpe ratio, Sortino ratio, and beta.
- Created utility functions for initializing Ray cluster and retrieving available devices.
- Developed trading metrics utilities for evaluating trading strategy performance, including risk-adjusted returns and drawdown analysis.
- Added test script for validating the configuration system of the trading RL agent.
- Implemented validation script to check mypy errors and configuration.

--- a/mypy.ini
+++ b/mypy.ini
@@ -26,17 +26,29 @@ ignore_errors = True
 [mypy-docs.*]
 ignore_errors = True
 
-[mypy-build_*]
+[mypy-build_datasets]
 ignore_errors = True
 
-[mypy-generate_*]
+[mypy-generate_sample_data]
 ignore_errors = True
 
-[mypy-validate_*]
+[mypy-validate_dataset]
 ignore_errors = True
 
-[mypy-run_*]
+[mypy-run_focus_cov]
 ignore_errors = True
 
-[mypy-evaluate_*]
+[mypy-evaluate_agent]
+ignore_errors = True
+
+[mypy-finrl_data_loader]
+ignore_errors = True
+
+[mypy-debug_env]
+ignore_errors = True
+
+[mypy-cli]
+ignore_errors = True
+
+[mypy-main]
 ignore_errors = True
