--- a/requirements.in
+++ b/requirements.in
@@ -57,6 +57,7 @@ ipython>=8.0
 finrl>=0.3.7
 alpaca-py>=0.4.0
 alpaca-trade-api>=2.3.0,<3.1.1
+alpha_vantage>=2.3.1
 ccxt>=1.66.32
 stockstats>=0.4.0
 # Using pandas_ta and ta libraries for technical analysis
