Refactor test files for improved readability and consistency
- Updated import statements in various test files for better organization.
- Reformatted DataFrame creation in tests for clarity.
- Removed unnecessary blank lines and adjusted spacing for consistency.
- Added a new  file to the trading_rl_agent package to manage imports.
- Introduced a new RiskfolioRiskManager class with position limits and Value at Risk calculations.
- Implemented RiskfolioConfig dataclass for configuration management in risk management.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,9 @@ repos:
     rev: v5.0.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
       - id: end-of-file-fixer
+        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
       - id: check-yaml
       - id: check-added-large-files
         args: ["--maxkb=50000"] # 50MB max
@@ -14,6 +16,7 @@ repos:
       - id: debug-statements
       - id: detect-private-key
       - id: mixed-line-ending
+        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
       - id: check-json
         exclude: ^(coverage\.json)$
       - id: check-toml
@@ -114,7 +117,6 @@ repos:
         language: system
         files: \.ipynb$
         require_serial: false
-
 
       - id: run-tests
         name: Run unit tests
