--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ torch==2.2.2
 ray[rllib]==2.9.3
 gymnasium==0.28.1 # Pinned to the version required by ray[rllib]==2.9.3
 pandas-ta==0.3.14b0
+scikit-learn==1.5.2
+mlflow==2.12.1
+tensorboard==2.17.0
 
 # Utilities
 pyyaml==6.0 # Pinned to a version compatible with alpaca-trade-api
