Update pre-commit configuration, remove cli.py, and add data quality report
- Updated mypy version in .pre-commit-config.yaml to v1.17.0.
- Removed cli.py as part of codebase cleanup.
- Added a new data quality report in HTML format to enhance data analysis capabilities.
- Introduced a data standardization guide to ensure consistent feature engineering across training and live inference.
- Updated requirements.txt to include new dependencies for sentiment analysis and data processing.
- Refactored Dockerfile for improved build efficiency and streamlined installation of Python packages.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,5 +24,5 @@
   "hostRequirements": {
     "gpu": "optional"
   },
-  "postCreateCommand": "chmod -R 755 . && find . -name '*.sh' -exec chmod +x {} \\; && pip install -e . && python -c 'import torch; print(f\"CUDA available: {torch.cuda.is_available()}\")'"
+  "postCreateCommand": "chmod -R 755 . && find . -name '*.sh' -exec chmod +x {} \\; && python -m pip install --upgrade pip setuptools wheel && pip install --verbose numpy pandas scikit-learn matplotlib seaborn && pip install --verbose 'gymnasium>=0.29.0,<0.30.0' && pip install --verbose 'ray[rllib,tune]>=2.6.0' && pip install --verbose yfinance alpha-vantage requests beautifulsoup4 && pip install --verbose ta scipy && pip install --verbose pyyaml typer click && pip install --verbose mlflow tensorboard wandb loguru && pip install --verbose pytest pytest-cov pytest-mock && pip install --verbose black isort ruff mypy pre-commit && pip install --verbose jupyter ipykernel notebook && pip install --verbose gunicorn fastapi uvicorn pydantic && pip install --verbose tqdm python-dotenv pathlib2 && pip install -e . --verbose && python -c 'import torch; print(f\"CUDA available: {torch.cuda.is_available()}\")'"
 }
