--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,16 @@ pandas>=2.0.0
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
+structlog>=23.1.0
+optuna>=3.0.0
 
 # Deep Learning
 torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
 
 # Reinforcement Learning
 gymnasium>=0.29.0
 stable-baselines3>=2.0.0
-ray[rllib]>=2.6.0
-ray[tune]>=2.6.0
+ray[rllib,tune]>=2.6.0
 
 # Data and APIs
 yfinance>=0.2.0
@@ -24,14 +23,13 @@ beautifulsoup4>=4.12.0
 
 # Feature Engineering
 ta>=0.10.0
-talib-binary>=0.4.0
 scipy>=1.11.0
+pandas-ta
 
 # Configuration and CLI
 pyyaml>=6.0
 typer>=0.9.0
 click>=8.1.0
-argparse>=1.4.0
 
 # Monitoring and Logging
 mlflow>=2.6.0
@@ -66,3 +64,6 @@ pydantic>=2.0.0
 tqdm>=4.65.0
 python-dotenv>=1.0.0
 pathlib2>=2.3.0
+
+# Sentiment Analysis
+vaderSentiment>=3.3.2
