Remove unused files and enhance configuration management
- Deleted .coverage and evaluate.py files to streamline the codebase.
- Introduced a new configuration management module (config.py) for centralized settings handling.
- Updated .pre-commit-config.yaml to exclude certain directories from YAML checks.
- Added mypy configuration file (mypy.ini) for type checking.
- Enhanced project documentation with a new CLI usage guide (README_CLI_USAGE.md) and configuration examples.
- Updated requirements.txt to include new dependencies for enhanced functionality.
- Improved CI/CD workflows with new GitHub Actions for testing and deployment.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
       - id: end-of-file-fixer
         exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
       - id: check-yaml
+        exclude: ^(k8s/|docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
       - id: check-added-large-files
         args: ["--maxkb=50000"] # 50MB max
       - id: check-ast
