--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,108 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "trading-rl-agent"
+version = "2.0.0"
+description = "Production-grade hybrid reinforcement learning trading system with CNN+LSTM integration"
+readme = "README.md"
+license = {text = "MIT"}
+authors = [
+    {name = "Trading RL Team", email = "team@trading-rl-agent.com"}
+]
+maintainers = [
+    {name = "Trading RL Team", email = "team@trading-rl-agent.com"}
+]
+keywords = ["trading", "reinforcement-learning", "machine-learning", "finance", "algorithmic-trading"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Financial and Insurance Industry",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Office/Business :: Financial :: Investment",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+requires-python = ">=3.10"
+dependencies = [
+    "numpy>=1.24.0",
+    "pandas>=2.0.0",
+    "scikit-learn>=1.3.0",
+    "matplotlib>=3.7.0",
+    "seaborn>=0.12.0",
+    "structlog>=23.1.0",
+    "optuna>=3.0.0",
+    "torch>=2.0.0",
+    "gymnasium>=0.29.0",
+    "stable-baselines3>=2.0.0",
+    "ray[rllib,tune]>=2.6.0",
+    "yfinance>=0.2.0",
+    "alpha-vantage>=2.3.0",
+    "requests>=2.31.0",
+    "beautifulsoup4>=4.12.0",
+    "ta>=0.10.0",
+    "scipy>=1.11.0",
+    "pandas-ta",
+    "pyyaml>=6.0",
+    "typer[all]>=0.9.0",
+    "click>=8.1.0",
+    "mlflow>=2.6.0",
+    "tensorboard>=2.13.0",
+    "wandb>=0.15.0",
+    "loguru>=0.7.0",
+    "tqdm>=4.65.0",
+    "python-dotenv>=1.0.0",
+    "pathlib2>=2.3.0",
+    "vaderSentiment>=3.3.2",
+    "rich>=13.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.11.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-benchmark>=4.0.0",
+    "pytest-timeout>=2.1.0",
+    "pytest-xdist>=3.3.0",
+    "black>=23.7.0",
+    "isort>=5.12.0",
+    "ruff>=0.0.284",
+    "mypy>=1.5.0",
+    "pre-commit>=3.3.0",
+    "jupyter>=1.0.0",
+    "ipykernel>=6.25.0",
+    "notebook>=7.0.0",
+]
+production = [
+    "gunicorn>=21.2.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/yourusername/trading-rl-agent"
+Documentation = "https://trading-rl-agent.readthedocs.io/"
+Repository = "https://github.com/yourusername/trading-rl-agent.git"
+"Bug Tracker" = "https://github.com/yourusername/trading-rl-agent/issues"
+"Changelog" = "https://github.com/yourusername/trading-rl-agent/blob/main/CHANGELOG.md"
+
+[project.scripts]
+trading-rl-agent = "trading_rl_agent.cli:app"
+
+# Alternative Poetry-style scripts section (for Poetry users)
+[tool.poetry.scripts]
+trading-rl-agent = "trading_rl_agent.cli:app"
+
 [tool.black]
 line-length = 120
 target-version = ['py310', 'py311', 'py312']
@@ -384,7 +489,3 @@ directory = "htmlcov"
 [tool.bandit]
 exclude_dirs = ["tests", "docs", "build", "dist"]
 skips = ["B101", "B601", "B102", "B108", "B324", "B506", "B614"]  # Skip assert_used, shell commands, weak cryptography, unsafe PyTorch load, etc.
-
-[build-system]
-requires = ["setuptools>=42", "wheel"]
-build-backend = "setuptools.build_meta"
