Enhance configuration management and testing setup
- Updated .gitignore to include coverage files and mock directories for cleaner project structure.
- Added new configuration file for quantstats version 0.0.64 to requirements.txt.
- Refactored config.py for improved clarity and type safety in configuration management.
- Enhanced CLI commands to better handle optional parameters and improve user experience.
- Introduced new test cases for CLI commands to ensure correct usage of settings and parameters.
- Added mock implementations for empyrical functions to maintain compatibility with Python 3.13.
- Improved logging utilities for better debugging and monitoring during trading sessions.

--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,16 @@ Thumbs.db
 
 # Testing
 .pytest_cache/
+.coverage
 coverage.json
 coverage.xml
 test-report.json
 test-report.md
 test-results.xml
+
+# Mock directories (test artifacts)
+<Mock*/
+<MagicMock*/
 
 # Node modules and cache files
 node_modules/
