--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,62 +31,79 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=1.24.0",
-    "pandas>=2.0.0",
-    "scikit-learn>=1.3.0",
-    "matplotlib>=3.7.0",
-    "seaborn>=0.12.0",
-    "structlog>=23.1.0",
-    "optuna>=3.0.0",
-    "torch>=2.0.0",
-    "gymnasium>=0.29.0",
-    "stable-baselines3>=2.0.0",
-    "ray[rllib,tune]>=2.6.0",
-    "yfinance>=0.2.0",
-    "alpha-vantage>=2.3.0",
-    "requests>=2.31.0",
-    "beautifulsoup4>=4.12.0",
-    "ta>=0.10.0",
-    "scipy>=1.11.0",
-    "pandas-ta",
-    "pyyaml>=6.0",
-    "typer[all]>=0.9.0",
-    "click>=8.1.0",
-    "mlflow>=2.6.0",
-    "tensorboard>=2.13.0",
-    "wandb>=0.15.0",
-    "loguru>=0.7.0",
-    "tqdm>=4.65.0",
-    "python-dotenv>=1.0.0",
-    "pathlib2>=2.3.0",
-    "vaderSentiment>=3.3.2",
-    "rich>=13.0.0",
+    # Core dependencies only - use requirements files for full installation
+    "numpy>=1.24.0,<2.0.0",
+    "pandas>=2.0.0,<3.0.0",
+    "pyyaml>=6.0,<7.0.0",
+    "python-dotenv>=1.0.0,<2.0.0",
+    "tqdm>=4.65.0,<5.0.0",
+    "structlog>=23.1.0,<24.0.0",
+    "requests>=2.31.0,<3.0.0",
+    "typer>=0.9.0,<1.0.0",
+    "rich>=13.0.0,<14.0.0",
 ]
 
 [project.optional-dependencies]
+# Development dependencies - testing and code quality
 dev = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "pytest-mock>=3.11.0",
-    "pytest-asyncio>=0.21.0",
-    "pytest-benchmark>=4.0.0",
-    "pytest-timeout>=2.1.0",
-    "pytest-xdist>=3.3.0",
-    "black>=23.7.0",
-    "isort>=5.12.0",
-    "ruff>=0.0.284",
-    "mypy>=1.5.0",
-    "pre-commit>=3.3.0",
-    "jupyter>=1.0.0",
-    "ipykernel>=6.25.0",
-    "notebook>=7.0.0",
+    "pytest>=7.4.0,<8.0.0",
+    "pytest-cov>=4.1.0,<5.0.0",
+    "pytest-mock>=3.11.0,<4.0.0",
+    "pytest-asyncio>=0.21.0,<1.0.0",
+    "pytest-benchmark>=4.0.0,<5.0.0",
+    "pytest-timeout>=2.1.0,<3.0.0",
+    "pytest-xdist>=3.3.0,<4.0.0",
+    "black>=23.7.0,<24.0.0",
+    "isort>=5.12.0,<6.0.0",
+    "ruff>=0.0.284,<1.0.0",
+    "mypy>=1.5.0,<2.0.0",
+    "pre-commit>=3.3.0,<4.0.0",
+    "jupyter>=1.0.0,<2.0.0",
+    "ipykernel>=6.25.0,<7.0.0",
+    "notebook>=7.0.0,<8.0.0",
+    "click>=8.1.0,<9.0.0",
 ]
+
+# Machine Learning dependencies
+ml = [
+    "scikit-learn>=1.3.0,<2.0.0",
+    "torch>=2.0.0,<3.0.0",
+    "scipy>=1.11.0,<2.0.0",
+    "ta>=0.10.0,<1.0.0",
+    "pandas-ta>=0.3.14b0,<1.0.0",
+    "statsmodels>=0.14.0,<1.0.0",
+    "empyrical>=0.5.5,<1.0.0",
+    "optuna>=3.0.0,<4.0.0",
+    "matplotlib>=3.7.0,<4.0.0",
+    "seaborn>=0.12.0,<1.0.0",
+    "gymnasium>=0.29.0,<1.0.0",
+    "stable-baselines3>=2.0.0,<3.0.0",
+]
+
+# Production dependencies
 production = [
-    "gunicorn>=21.2.0",
-    "fastapi>=0.100.0",
-    "uvicorn>=0.23.0",
-    "pydantic>=2.0.0",
-    "pydantic-settings>=2.0.0",
+    "gunicorn>=21.2.0,<22.0.0",
+    "fastapi>=0.100.0,<1.0.0",
+    "uvicorn>=0.23.0,<1.0.0",
+    "pydantic>=2.0.0,<3.0.0",
+    "pydantic-settings>=2.0.0,<3.0.0",
+    "yfinance>=0.2.0,<1.0.0",
+    "alpha-vantage>=2.3.0,<3.0.0",
+    "beautifulsoup4>=4.12.0,<5.0.0",
+    "ray[rllib,tune]>=2.6.0,<3.0.0",
+    "vaderSentiment>=3.3.2,<4.0.0",
+    "arch>=6.2.0,<7.0.0",
+    "quantstats>=0.0.62,<1.0.0",
+    "mlflow>=2.6.0,<3.0.0",
+    "tensorboard>=2.13.0,<3.0.0",
+    "wandb>=0.15.0,<1.0.0",
+    "loguru>=0.7.0,<1.0.0",
+    "pathlib2>=2.3.0,<3.0.0",
+]
+
+# Full installation - all dependencies
+full = [
+    "trading-rl-agent[dev,ml,production]",
 ]
 
 [project.urls]
