Implement comprehensive system health monitoring and dashboard features
- Introduced a new System Health Monitor module for real-time monitoring of system resources, trading performance metrics, and automated health checks.
- Added a Health Dashboard for visualizing system health and performance metrics, including alerts and historical data.
- Enhanced CLI commands for system health monitoring, allowing users to start monitoring sessions and view alerts.
- Updated documentation to include setup instructions and usage examples for the new monitoring features.
- Added tests to ensure functionality and reliability of the health monitoring system.

--- a/mypy.ini
+++ b/mypy.ini
@@ -50,3 +50,7 @@ ignore_errors = true
 # Ignore typer decorators
 [mypy-typer.*]
 ignore_missing_imports = true
+
+# Use pandas-stubs for better type checking
+[mypy-pandas.*]
+ignore_missing_imports = true
