--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dev = [
     "ipykernel>=6.25.0,<7.0.0",
     "notebook>=7.0.0,<8.0.0",
     "click>=8.1.0,<9.0.0",
+    "pandas-stubs>=2.3.0,<3.0.0",
 ]
 
 # Machine Learning dependencies
