--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -27,3 +27,6 @@ notebook>=7.0.0,<8.0.0
 
 # Additional development utilities
 click>=8.1.0,<9.0.0
+
+# Type checking stubs
+pandas-stubs>=2.3.0,<3.0.0
