Implement comprehensive Kubernetes deployment for Trading System
- Added deployment configurations for multiple microservices including API service, trading engine, ML service, and data pipeline.
- Introduced autoscaling configurations for horizontal scaling of services based on CPU and memory utilization.
- Implemented monitoring stack with Prometheus and Grafana for real-time metrics and visualization.
- Created CI/CD pipeline configuration for automated deployment and testing.
- Established infrastructure services including PostgreSQL, Redis, and RabbitMQ with persistent storage.
- Enhanced documentation to provide setup instructions, architecture overview, and quick start guide.
- Included deployment automation script for streamlined resource management.

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -2,15 +2,44 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: trading-rl-agent-secrets
+  namespace: trading-system
   labels:
     app: trading-rl-agent
 type: Opaque
 data:
-  # Base64 encoded values - replace with actual encoded values
+  # Trading API credentials
   alpaca-api-key: <base64-encoded-alpaca-api-key>
   alpaca-secret-key: <base64-encoded-alpaca-secret-key>
   alpaca-base-url: <base64-encoded-alpaca-base-url>
+
+  # Data provider API keys
   alphavantage-api-key: <base64-encoded-alphavantage-api-key>
   newsapi-key: <base64-encoded-newsapi-key>
+  polygon-api-key: <base64-encoded-polygon-api-key>
+
+  # Database credentials
+  postgres-username: dHJhZGluZ191c2Vy
+  postgres-password: <base64-encoded-postgres-password>
+  postgres-database: dHJhZGluZ19zeXN0ZW0=
+
+  # Redis credentials
+  redis-password: <base64-encoded-redis-password>
+
+  # RabbitMQ credentials
+  rabbitmq-username: dHJhZGluZ191c2Vy
+  rabbitmq-password: <base64-encoded-rabbitmq-password>
+
+  # JWT signing key
+  jwt-secret: <base64-encoded-jwt-secret>
+
+  # Monitoring API keys
+  prometheus-auth-token: <base64-encoded-prometheus-token>
+  grafana-admin-password: <base64-encoded-grafana-password>
+
+  # External service API keys
+  slack-webhook-url: <base64-encoded-slack-webhook>
+  email-smtp-password: <base64-encoded-smtp-password>
+
   # Example of how to encode values:
   # echo -n "your-api-key" | base64
+  # echo -n "your-secret-password" | base64
